<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eventsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/maincardconstraint_background"
        android:outlineSpotShadowColor="@color/effectShadow"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/taskText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="start"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:text="@string/task"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="start"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:text="@string/titleText"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskText" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="start"
            android:maxLines="2"
            android:paddingStart="4dp"
            android:paddingBottom="8dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>