<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.MainDetailsFragment">


    <TextView
        android:id="@+id/backText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/backText"
        android:textColor="@color/black"
        android:drawableStart="@drawable/baseline_chevron_left_24"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailConstraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/maindetailsconstraint_background"
        android:elevation="20dp"
        android:outlineSpotShadowColor="@color/effectShadow"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backText">


        <TextView
            android:id="@+id/wageTypeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/wageType"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/view1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wageTypeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="05385101167"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@+id/wageTypeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/wageTypeTitle"
            app:layout_constraintTop_toTopOf="@+id/wageTypeTitle" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/line_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wageTypeTitle"></View>

        <TextView
            android:id="@+id/businessUnitTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/businessUnit"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/wageTypeTitle"
            app:layout_constraintTop_toTopOf="@id/view1" />

        <TextView
            android:id="@+id/businessUnitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="center"
            android:text="Pazartesi 1.10.2024"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/businessUnitTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/businessUnitTitle" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/line_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessUnitTitle"></View>

        <TextView
            android:id="@+id/colorCodeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/colorCode"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/businessUnitTitle"
            app:layout_constraintTop_toTopOf="@id/view2" />

        <TextView
            android:id="@+id/ColorCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="08-00 - 20:00"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/colorCodeTitle" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/line_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorCodeTitle"></View>

        <TextView
            android:id="@+id/workingTimeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/workingTime"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/wageTypeTitle"
            app:layout_constraintTop_toTopOf="@id/view3" />

        <TextView
            android:id="@+id/workingTimeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="end"
            android:maxLines="2"
            android:text="Yenişafak Mah. 1088 sk.Turkuaz Apt. No: 14"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/workingTimeTitle"
            app:layout_constraintEnd_toEndOf="@id/wageTypeText"
            app:layout_constraintStart_toStartOf="@+id/businessUnitText"
            app:layout_constraintTop_toTopOf="@id/workingTimeTitle" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/line_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workingTimeTitle"></View>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>